# data-ingestion-api

./: .dockerignore  .gitmodules  Dockerfile  config.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: python-app.yml
